2006-04-05 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (genCall): fixed bug 1457608

2006-03-30 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* doc/sdccman.lyx: reverted to version 1.129 of december as my latest
	changes seem to cause (trigger?) problems with the build system.

2006-03-29 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCpeeph.c (operandsLiteral): new, added,
	  (callFuncByName): inserted operandsLiteral
	* src/mcs51/peeph.def: reenabled 132.e, added extra check to 132.x

2006-03-28 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* doc/sdccman.lyx: added paragraph "Use of SDCC in Education"
	* src/mcs51/peeph.def: disabled rule 132.e fixing bug #1453093

2006-03-24 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/z80/gen.c (genFunction, genEndFunction): fixed bug 1160666,
	  implemented patch 1120823 Thanks to Willy De la Court (normal
	  interrupts need an interrupt number now if they are made critical),
	  and enabled nesting of critical functions though not for gbz80
	  (genCritical, genEndCritical): added functions
	  (genZ80Code): added cases for CRITICAL and ENDCRITICAL
	* src/z80/mappings.i: added "ei" to all mappings

2006-03-20 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* sim/ucsim/cmd.src/newcmdcl.h: applied patch fixing GCC 4.1 build
	submitted by the Debian SDCC maintainer Aurelien Jarno:
	"Credits goes to Martin Michlmayr, who rebuilt the whole Debian
	archive with gcc 4.1 on mips and wrote the patch"

2006-03-16 Raphael Neider <rneider AT web.de>

	* src/pic16/genarith.c (genAddLit): simplified and fixed case where
	  the left operand is shorter than the result (c* = lit-c* + int),
	  fixes bug #1450796
	* src/pic16/gen.c (genRightShift): check IS_SYMOP before accessing
	  OP_SYMBOL

2006-03-14 Vangelis Rokas <vrokas AT users.sourceforge.net>

	* src/.version: increased version number to 2.5.5
	* src/SDCCmain.c (linkEdit): do not test for PIC16 target since, PIC16